--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         }
     </script>
     <style>
+    	.hi{
+            text-align:center;
+            margin:40px;
+        }
     	#hello{
             font-weight: bold;
             font-size: 5em;
@@ -36,7 +40,7 @@
 </head>
 
 <body>
-		<h1 id="hello">
+		<h1 class="hi" id="hello">
 			Hello World
 		</h1>
 </body>
