--- a/IML-400/index.html
+++ b/IML-400/index.html
@@ -110,9 +110,9 @@
         
         <h3>Welcome to IML 400 Spring 2015 [ <a href="syllabus-spring-2015.html" onclick="//alert('this is a work in progress')">Syllabus</a> ]</h3>
         <h3>Lecturer <a href="http://blacklog.mitplw.com/">Luis Blackaller</a><br />
-        <!-- Teacher Assistant <a href="http://rosemarycomella.com/">Rosemary Comella</a></h3>--> 
-
-          
+        <!-- Teacher Assistant <a href="http://rosemarycomella.com/">Rosemary Comella</a></h3>
+        --> 
+  
         <div id="student-websites"> 
         <!--  
             <h3>Students</h3>
@@ -130,7 +130,7 @@
                 <li><a href="http://storm.usc.edu/~cbthomas/IML-400/">Christopher Brady Thomas</a></li>
                 <li><a href="http://storm.usc.edu/~tsukii/IML-400/">Kevin Hikaru Tsukii</a></li>
             </ol>
--->        
+        -->        
             <h3>Assignments</h3>
             <ol>
                 <li><a href="assignment-1.html">HTML & CSS Review</a></li>
