fixing a couple image files

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <strong>PictureXS</strong> was an anonymous image aggregator where anybody was able to upload and classify pictures without compromising their identity. It featured an embedded tracing tool, a self-regulated censorship system, and a taxonomy that combined comparative insights from tags and computer vision based analysis. Before it was turned off in 2011, PictureXS had collected over 30,000 pictures, 1000 drawings and 500,000 tags.
                 </p>
                 <p>
-                    <img alt="" src="images/picturexs-2.png" style="width: 640.00px; margin-left: 0.00px; margin-top: 0.00px;" >
+                    <img alt="" src="images/picturexs-2.jpg" style="width: 640.00px; margin-left: 0.00px; margin-top: 0.00px;" >
                 </p>
             </div>
         </div> <!----------------------pictureXS-->
