--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
     #wrapper{
         width:760px;
-        margin:40px auto;
+        margin:20px auto; /* was 40px */
     }
     p{
         padding:10px 0px 10px 0;
