--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         margin:20px;
         color:#777777;
     }
+    #sunspot{
+        margin:0px;
+        padding:50px 0 0 0;
+    }
 
     </style>
     <script type="text/javascript">
@@ -135,7 +139,7 @@
                 <p>
                     The work listed in this document is a testament to my creative and technical range and flexibility as an artist, designer, programmer, and communicator. I hope you enjoy them as much as I do.
                 </p>
-                <canvas id="sunspot" width="640" height="200"></canvas>
+                    <canvas id="sunspot" width="640" height="200"></canvas>
             </div>
         </div> <!----------------------ABOUT-->
         
