--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         sunctx.save();
         sunctx.translate(320,100);
         sunctx.scale(2.0,2.0);
+        // good values for max(i): 6, 11
         for (i=2;i<6;i++){
             sunctx.save();
             sunctx.fillStyle = 'rgb(255,'+Math.abs(286-51*i)+',0)';
