--- a/IML400/fall-2012/experiments.html
+++ b/IML400/fall-2012/experiments.html
@@ -8,7 +8,7 @@
 
 	<ul>
 		<li><a href="video-bg">Video Background</a></li>
-		<li><a href="map-bg">Google Maps Scrolling Background</a></li>
+		<!--<li><a href="map-bg">Google Maps Scrolling Background</a></li>-->
 		<li><a href="supersized/slideshow/mytest.html">Photo Slideshow</a></li>
 	</ul>
 </body>
