added new files for canvas scripts

--- a/index.html
+++ b/index.html
@@ -504,7 +504,8 @@
                     <ul>
                         <li><a href="tiles">Lisp based tiling generator</a> (archive)</li>
                         <li><a href="plugsense">PlugSense</a> (archive)</li>
-                        <li><a href="lab">Generative art gallery</a> (requires Java)</li>
+                        <li><a href="lab">Generative art archive</a> (requires Java)</li>
+                        <li><a href="lab/p5/mysketches/">Browser based generative art gallery</a> (work in progress)</li>
                         <li><a href="fantasticsoup">Fantastic Soup film collective</a> (archive)</li>
                     </ul>
                 </p>
