--- a/lab/p5/mysketches/index.html
+++ b/lab/p5/mysketches/index.html
@@ -93,6 +93,9 @@
                     draw
                 </li>
                 <li>
+                    <a href="/lab/canvas/tinyDoodle/">tinyDoodle</a>
+                </li>
+                <li>
                     text
                 </li>
                 <li>
@@ -100,6 +103,12 @@
                 </li>
                 <li>
                     math
+                </li>
+                <li>
+                    canvas
+                </li>
+                <li>
+                    <a href="/lab/canvas/canvasclock.html">canvasClock</a>
                 </li>
                 <li>
                     basic
