--- a/sites.html
+++ b/sites.html
@@ -83,14 +83,15 @@
 			<p>
 				 <h2>&#x1FAA6; RIP black.mitplw.com &#x1F54A;&#xFE0F; 2005-2025 &#x1F54A;&#xFE0F;</h2>
 				<ul>
-					<li><a href="fantasticsoup">Fantastic Soup</a></li>
-					<li><a href="IML-400">IML-400</a></li>
+					<li><a href="../">home</a></li>
+					<li><a href="fantasticsoup">fantastic soup</a></li>
+					<li><a href="IML400">IML-400</a></li>
 					<li><a href="lab">lab</a></li>
 					<li><a href="lab/p5/mysketches">lab/p5</a></li>
 					<li><a href="ogfx">oGFx</a></li>
 					<li><a href="plugsense">plugSense</a></li>
 					<li><a href="tiles">tiles</a></li>
-					<li><a href="tiny-abc">tiny-ABC</a></li>
+					<!--<li><a href="tiny-abc">tiny-ABC</a></li>-->
 				</ul>
 			</p>
 		</div>
