--- a/lab/canvas/tinyDoodle/original.html
+++ b/lab/canvas/tinyDoodle/original.html
@@ -53,8 +53,11 @@
 
      canvas { 
 			position:absolute; 
-			border: 1px solid black; 
-	        background-color: #111111;}
+			/* border: 1px solid black; 
+	        background-color: #111111; */
+	        background-color: #afafaf;}
+	        /* To do: pass the canvas background from the stylesheet to the script, even the stroke color as well? or have a set up script to pass a json init parameter on load*/
+	    }
    </style>
 <head>
 
