--- a/lab/canvas/tinyDoodle/original.html
+++ b/lab/canvas/tinyDoodle/original.html
@@ -3,11 +3,12 @@
 
 
 <style type="text/css">
-	  body {  
-	        background-color: none;
-	font: 14px/16px Arial, Helvetica, Verdana, sans-serif;
-	font-weight: bold;
-	letter-spacing: -1px;
+	body {  
+	    background-color: #161616;
+	    color: #afafaf;
+		font: 14px/16px Arial, Helvetica, Verdana, sans-serif;
+		font-weight: bold;
+		letter-spacing: -1px;
 	}
 	
 	
@@ -19,7 +20,7 @@
 	}
 
 	a:hover {
-		color:  white;
+		color:  #afafaf;;
 		font-weight: bold;
 		text-decoration: none;
 		background-color:deeppink;
@@ -53,8 +54,8 @@
 
      canvas { 
 			position:absolute; 
-			/* border: 1px solid black; 
-	        background-color: #111111; */
+			border: 1px solid #afafaf;; 
+	        /* background-color: #111111; */
 	        background-color: #afafaf;}
 	        /* To do: pass the canvas background from the stylesheet to the script, even the stroke color as well? or have a set up script to pass a json init parameter on load*/
 	    }
