why not folks a single character commit &#xB1;

--- a/lab/p5/mysketches/index.html
+++ b/lab/p5/mysketches/index.html
@@ -85,7 +85,7 @@
         <div>
             <p>
                 generative interactive reactive time capsule <br />
-                artisanal html5 p5js by Luis Blackaller <br />
+                artisanal html5 &#xB1; p5js by Luis Blackaller <br />
                 mit media lab 2005-2007
             </p>
             <ul>
