and again it's nothing

--- a/lab/canvas/tinyDoodle/index.html
+++ b/lab/canvas/tinyDoodle/index.html
@@ -46,7 +46,8 @@
   <div id="description">
     <a href="/lab/p5/mysketches"><<</a> <br/>
     tinyDoodle 2008 <br/>
-    Please draw. In this canvas to draw is to erase, and to create is to forget.
+    In this canvas to draw is to erase, and to create is to forget. <br/>
+    Please draw. 
   </div>
 	<canvas id="paper-0" width="400px" height="400px"></canvas>
 </div>
