to go home link

--- a/lab/canvas/canvasclock.html
+++ b/lab/canvas/canvasclock.html
@@ -176,7 +176,7 @@ window.onload = function(e){
   <div id="wrapper">
   <div id="description">
     <a href="/lab/p5/mysketches"><<</a> <br/>
-    canvas clock 2007 <br/>
+    canvasClock 2007 <br/>
     always on time
   </div>
       <canvas id="clock" width="400" height="400" style="background:#c2c2c2;"></canvas>
