--- a/lab/p5/mysketches/index.html
+++ b/lab/p5/mysketches/index.html
@@ -84,6 +84,7 @@
 		</div>
         <div>
             <p>
+                <a href="/"><<</a><br />
                 generative interactive reactive time capsule <br />
                 artisanal html5 &#xB1; p5js by Luis Blackaller <br />
                 mit media lab 2005-2007
