--- a/lab/p5/mysketches/index.html
+++ b/lab/p5/mysketches/index.html
@@ -106,6 +106,9 @@
                     math
                 </li>
                 <li>
+                    <a href="/lab/canvas/transformationstack.html">sunSpot</a>
+                </li>
+                <li>
                     canvas
                 </li>
                 <li>
