small small small

--- a/lab/canvas/transformationstack.html
+++ b/lab/canvas/transformationstack.html
@@ -85,7 +85,8 @@
   <div id="description">
     <a href="/lab/p5/mysketches"><<</a> <br/>
     sunSpot 2007 <br/>
-    loops and iterations, an illustrated transformation stack
+    loops and iterations <br/>
+    an illustrated transformation stack
   </div>
       <canvas id="sunspot" width="400" height="400"></canvas>
 </div>
