--- a/lab/canvas/transformationstack.html
+++ b/lab/canvas/transformationstack.html
@@ -35,7 +35,7 @@
     }
     #sunspot{
         height:400px;
-        background:#454545;
+        background:#afafaf;
     }
 
   </style>
@@ -48,7 +48,7 @@
 
     function drawSun() {
         var sunctx = document.getElementById('sunspot').getContext('2d');
-        sunctx.fillStyle = '#454545';
+        sunctx.fillStyle = '#afafaf';
         //sunctx.fillStyle = 'rgba(222, 222, 222, 1)'; // aka #dedede, or:
         //sunctx.fillStyle = 'rgba(30, 144, 255, 0.2)'; // aka dodgerblue
         sunctx.fillRect(0,0,400,400);
