--- a/lab/canvas/canvasclock.html
+++ b/lab/canvas/canvasclock.html
@@ -179,7 +179,7 @@ window.onload = function(e){
     canvasClock 2007 <br/>
     always on time
   </div>
-      <canvas id="clock" width="400" height="400" style="background:#c2c2c2;"></canvas>
+      <canvas id="clock" width="400" height="400" style="background:#afafaf;"></canvas>
 </div>
 </body>
 
