--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
                 <p>
                     Additional material:
                     <ul>
-                        <li><a href="https://github.com/blackaller/OPENSTUDIO-archive">openstudio github repository</a> (archive)</li>
-                        <li><a href="https://www.flickr.com/groups/1256152@N22/">openstudio flickr group</a> (archive)</li>
+                        <li><a href="https://github.com/blackaller/OPENSTUDIO-archive">openStudio github repository</a> (archive)</li>
+                        <li><a href="https://www.flickr.com/groups/1256152@N22/">openStudio flickr group</a> (archive)</li>
                     </ul>
                 </p>
                 <p>
@@ -468,7 +468,6 @@
                 <p>
                     Additional material:
                     <ul>
-                        <li><a href="https://github.com/blackaller/OPENSTUDIO-archive">openstudio github repository</a> (archive)</li>
                         <li><a href="https://www.flickr.com/photos/blackaller/albums/72177720315259318/">Tiny Icon Factory flickr gallery</a> (archive)</li>
                     </ul>
                 </p>
