--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             <div class="write-up">
                 <p>
                     <ul>
-                        <li><a href="tiles">Lisp based tiling generator</a> (archive)</li>
+                        <li><a href="tiles">Reflections on Symmetry</a> (tiling generator archive)</li>
                         <li><a href="plugsense">PlugSense</a> (archive)</li>
                         <li><a href="lab">Generative art archive</a> (requires Java)</li>
                         <li><a href="lab/p5/mysketches/">Browser based generative art gallery</a> (work in progress)</li>
