--- a/index-dark.html
+++ b/index-dark.html
@@ -89,7 +89,7 @@
 
     function drawSun() {
         var sunctx = document.getElementById('sunspot').getContext('2d');
-        sunctx.fillStyle = '#eaeaea';
+        sunctx.fillStyle = '#131313';
         sunctx.fillRect(0,0,640,200);
         sunctx.save();
         sunctx.translate(320,100);
