avoid select on sun

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         padding:0;
     }
     #switch{
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
+        user-select: none; /* Standard syntax */
         cursor: pointer;
         text-align:center;
         width:48px;
