switch style adjustments

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         position:fixed;
         top:0px;
         margin:0;
-        padding:20px 6px 0 6px;
-        font-size:3.5em;
+        padding:52px 0px 0 20px;
+        font-size:4.5em;
     }
     h1{
         color:#444444;
@@ -548,7 +548,8 @@
         if (lightsOn){ // turn off
             sunSky = "#131313";
             document.getElementById("switch").innerHTML = "&#127770;";
-            document.getElementById("switch").style.fontSize = "2.8em";
+            document.getElementById("switch").style.fontSize = "3.6em";
+            document.getElementById("switch").style.paddingLeft = "25px";
             //document.getElementById("switch").innerHTML = "&#127773;";
             theBody.style.background = "#0c0c0c";
             theBody.style.color = "#eaeaea";
@@ -569,7 +570,8 @@
         else { // turn on
             sunSky = "#eaeaea";
             document.getElementById("switch").innerHTML = "&#127774";
-            document.getElementById("switch").style.fontSize = "3.5em";
+            document.getElementById("switch").style.fontSize = "4.5em";
+            document.getElementById("switch").style.paddingLeft = "20px";
             theBody.style.background = "#cdcdcd";
             theBody.style.color = "#444444";
             for (let i = 0; i < theSections.length; i++) {
