--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         margin:0;
         padding:36px 0px 0 20px;
         font-size:4.5em;
+        z-index: 0;
     }
     h1{
         color:#444444;
@@ -76,6 +77,7 @@
         padding:20px 40px 60px 40px;
         background:#eaeaea;
         margin:40px 0px 40px 0px;
+       
     }
     .divider{
         padding:20px 40px 20px 40px;
@@ -137,7 +139,6 @@
 </head>
 
 <body onload="initSun();">
-    <div id="switch" onclick="switchLights()">&#127774;</div>
     <div id="wrapper">
         <div class="section"id="about"> <!----------------------ABOUT-->
             <div class="header">
@@ -534,6 +535,7 @@
 
 
     </div>
+    <div id="switch" onclick="switchLights()">&#127774;</div>
     <script>
     var lightsOn=true;
     function switchLights() {
@@ -551,19 +553,19 @@
             document.getElementById("switch").style.fontSize = "3.6em";
             document.getElementById("switch").style.paddingLeft = "25px";
             //document.getElementById("switch").innerHTML = "&#127773;";
-            theBody.style.background = "#0c0c0c";
+            theBody.style.background = "#090909";
             theBody.style.color = "#eaeaea";
             for (let i = 0; i < theSections.length; i++) {
-                theSections[i].style.background = "#131313";
+                theSections[i].style.background = "#191919";
             }
             for (let i = 0; i < theDividers.length; i++) {
-                theDividers[i].style.background = "#131313";
+                theDividers[i].style.background = "#191919";
             }
             for (let i = 0; i < theTexts.length; i++) {
-                theTexts[i].style.color = "#868686";
+                theTexts[i].style.color = "#979797";
             }
             for (let i = 0; i < theHeaders.length; i++) {
-                theHeaders[i].style.color = "#aaa";
+                theHeaders[i].style.color = "#bbb";
             }
             //alert(theHeaders.length);
         }
