--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                         <li><a href="fantasticsoup">Fantastic Soup film collective</a> (archive)</li>
                     </ul>
                 </p>
-                <p style="margin-top:50px; color:#444444; text-align:center; font-size:3em;">
+                <p style="margin-top:50px; text-align:center; font-size:3em;">
                     Thank you &#x1F60A;
                 </p>
                 <canvas id="sunspot" width="640" height="200"></canvas>
