--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         position:fixed;
         top:0px;
         margin:0;
-        padding:36px 0px 0 20px;
+        padding:346px 0px 0 20px; /*it was 36*/
         font-size:4.5em;
         z-index: 0;
     }
