still messing with the sun

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         position:fixed;
         top:0px;
         margin:0;
-        padding:346px 0px 0 20px; /*it was 36*/
+        padding:50px 0px 0 30px; /* padding top originally 36 padding left originally 20 */
         font-size:4.5em;
         z-index: 0;
     }
@@ -551,7 +551,7 @@
             sunSky = "#191919";
             document.getElementById("switch").innerHTML = "&#127770;";
             document.getElementById("switch").style.fontSize = "3.6em";
-            document.getElementById("switch").style.paddingLeft = "25px";
+            document.getElementById("switch").style.paddingLeft = "35px";
             //document.getElementById("switch").innerHTML = "&#127773;";
             theBody.style.background = "#090909";
             theBody.style.color = "#eaeaea";
@@ -573,7 +573,7 @@
             sunSky = "#eaeaea";
             document.getElementById("switch").innerHTML = "&#127774";
             document.getElementById("switch").style.fontSize = "4.5em";
-            document.getElementById("switch").style.paddingLeft = "20px";
+            document.getElementById("switch").style.paddingLeft = "30px";
             theBody.style.background = "#cdcdcd";
             theBody.style.color = "#444444";
             for (let i = 0; i < theSections.length; i++) {
