viewport adjustments on lab

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>Luis Blackaller Media Artist</title>
+    <title>Luis Blackaller - Media Artist</title>
     <style>
     body{
         font-family: monospace;
@@ -567,7 +567,7 @@
             for (let i = 0; i < theHeaders.length; i++) {
                 theHeaders[i].style.color = "#bbb";
             }
-            //alert(theHeaders.length);
+            // alert(theHeaders.length);
         }
         else { // turn on
             sunSky = "#eaeaea";
