--- a/lab/canvas/tinyDoodle/index.html
+++ b/lab/canvas/tinyDoodle/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<style type="text/css">
-	body {
-		padding: 0;
-		margin: 0;
-		background: #dedede;
-		font-family: monospace;
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>tinyDoodle</title>
+  <style type="text/css">
+  body {
+    padding: 0;
+    margin: 0;
+    background: #dedede;
+    font-family: monospace;
     }
     #wrapper{
-		max-width: 400px;
-		margin:80px auto;
-		overflow:auto;
-		padding:0px;
+    max-width: 400px;
+    margin:80px auto;
+    overflow:auto;
+    padding:0px;
     }
     #description{
-		color: dodgerblue;
-		padding:10px 5px ;
+    color: dodgerblue;
+    padding:10px 5px ;
     }
     a {
         color: deeppink;
@@ -30,13 +35,10 @@
     }
 
      canvas { 
-			position:absolute; 
-			/*border: 1px solid black;*/ 
-	        background-color: #afafaf;}
-</style>
-<head>
-
-
+      position:absolute; 
+      /*border: 1px solid black;*/ 
+          background-color: #afafaf;}
+  </style>
 	<script type="text/javascript" src="javascripts/prototype.js"></script>
 	<script type="text/javascript" src="javascripts/pencil.js"></script>
 	
