--- a/lab/p5/mysketches/index.html
+++ b/lab/p5/mysketches/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Blackaller Lab 2025</title>
     <script>
         var step = true;
@@ -96,23 +97,25 @@
                 <li>
                     <a href="/lab/canvas/tinyDoodle/">tinyDoodle</a>
                 </li>
-                <!--<li>
+                <!--
+                <li>
                     text
                 </li>
                 <li>
                     image
                 </li>
-                <li>-->
+                <li>
                     math
                 </li>
-                <li>
-                    <a href="/lab/canvas/transformationstack.html">sunSpot</a>
-                </li>
+                -->
                 <li>
                     canvas
                 </li>
                 <li>
                     <a href="/lab/canvas/canvasclock.html">canvasClock</a>
+                </li>
+                <li>
+                    <a href="/lab/canvas/transformationstack.html">sunSpot</a>
                 </li>
                 <li>
                     basic
