tinydoodle instructions update

--- a/lab/canvas/tinyDoodle/index.html
+++ b/lab/canvas/tinyDoodle/index.html
@@ -50,7 +50,7 @@
     tinyDoodle 2008 <br/>
     In this canvas to draw is to erase, <br/>
     and to create is to forget. <br/>
-    Please draw. 
+    Please draw (a mouse, tablet or trackpad is required)
   </div>
 	<canvas id="paper-0" width="400px" height="400px"></canvas>
 </div>
