index headshot photo credit

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="header">
                 <h2>Luis E. Blackaller</h2>
                 
-                <img alt="luis blackaller portrait" src="images/headshot.jpg" style="width: 320px; margin-left: 0.00px; margin-top: 20.00px; margin-bottom: 10.00px;" title="">
+                <img alt="luis blackaller portrait 2025 by eric schaechter" src="images/headshot.jpg" style="width: 320px; margin-left: 0.00px; margin-top: 20.00px; margin-bottom: 10.00px;" title="">
                 <h3>&#128065; &#9997;&#65039; &#127912; &#127916; &#128218; &#9986;&#65039; &#128421; &#129302;</h3>
             </div>
 
