--- a/IML400/index.html
+++ b/IML400/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>IML 400 Current</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IML 400 Spring 2015</title>
     <script>
         var step = true;
 
@@ -66,8 +67,9 @@
             padding:0px;
         }
         #wrapper{
-            max-width: 990px;
-            /*max-width: 720px;*/
+            max-width: 820px; /* original 720px */
+            min-width: 820px;
+
             margin:0px auto;
             overflow:auto;
             padding:10px;
@@ -80,7 +82,7 @@
             padding:0px 40px;
         }
         #student-websites, #assignments, #links, #links-2{
-            width:328px;
+            width:272px;
             float:left;
         }
         #student-websites h3, #assignments h3, #links h3, #links-2 h3{
