--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         padding:0;
     }
     #switch{
+        background: none;
         -webkit-user-select: none; /* Safari */
-        -ms-user-select: none; /* IE 10 and IE 11 */
         user-select: none; /* Standard syntax */
         cursor: pointer;
         text-align:center;
