--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@
     <script>
     var lightsOn=true;
     function switchLights() {
+        document.getElementById("switch").style.background = "none";
         const theBody = document.getElementsByTagName("body")[0];
         const theH1s = document.getElementsByTagName("h1");
         const theH2s = document.getElementsByTagName("h2");
